changes in the intro

--- a/report/DetailedArchitecture.tex
+++ b/report/DetailedArchitecture.tex
@@ -1,6 +1,8 @@
 \section{Detailed Architecture}
 \label{DetailedArchitecture}
+\begin{itemize}
+ \item Metamodel 
+ \item Skeleton 
+ \item Generator 
 
-Metamodel \\
-Skeleton \\
-Generator \\
+\end{itemize}
