--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,14 @@
 % References
 
+@phdthesis{ Papa11,
+	author = "Camilla Papa",
+	title = "Una Metodologia per la Modellazione di Sistemi Sritici basata su metodi e tecniche di Model Driven Engineering",
+	school = "Universit{\`a} Federico II, Napoli",
+	address = "Italy",
+	year = "2011",
+	month = "November"
+}
+
 @PhDThesis{ DiLorenzo08,
 	author = "Giusy Di Lorenzo",
 	title = "Methodologies, architectures and tools for automated service composition in SOA",
@@ -15,6 +24,14 @@
 	journal = "Mondo Digitale - Upgrade",
 	number = "9",
 	year = "2004"
+}
+
+@Article{ Lukman08,
+	author = "Tomaž Lukman and Marjan Mernik",
+	title = "Model-Driven Engineering and its introduction with metamodeling tools",
+	year = "2008",
+	howpublished = "\url{http://dsc.ijs.si/files/papers/S201%20Lukman.pdf}",
+	note = "[Online; accessed 30-June-2012]"
 }
 
 @InProceedings{ Papazoglou03,
@@ -207,7 +224,7 @@
 @Article{ RMI-art2,
 	author = "N.A.B. Gray",
 	title = "Comparison of Web Services, Java-RMI, and CORBA service implementations",
-	journal = "whatever",
+	journal = "w",
 	year = "2004"
 }
 
@@ -217,7 +234,7 @@
 	booktitle = "SIGPLAN Notices 35(8), Aug. 2000, ACM",
 	year = "2000",
 	pages = "31--40",
-	journal = "whatever",
+	journal = "w",
 	publisher = "ACM Press"
 }
 
