--- a/report/skeleton.tex
+++ b/report/skeleton.tex
@@ -28,9 +28,9 @@
 \subsection{Java RMI}
 - Overview, features.
 - Why? it can run everywhere, lightweight scenarios  \nl
-\subsection{Jet}
-\subsection{EMF and Open Architecture Ware (Eclipse)}
-\subsection{other...} 
+%\subsection{Jet}
+%\subsection{EMF and Open Architecture Ware (Eclipse)}
+%\subsection{other...} 
 %----------------------------------------------------------------------------------
 
 %---Detailed Architecture---
