Added the M2T reference

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,13 @@
 % References
 
+@Misc{ M2TandM2M,
+	title = "Comparing M2T and M2M Complementary Approaches",
+	author = "Hugo Bruneliere and Richard Paige and Goran Olsen",
+	howpublished = "\url{http://www.eclipse.org/gmt/omcw/resources/chapter10/downloads/Modelplex-WP6-Training_ComparingM2TandM2M.ppt}",
+	year = "2008",
+	note = "[Online; accessed 2-July-2012]"
+}
+
 @phdthesis{ Papa11,
 	author = "Camilla Papa",
 	title = "Una Metodologia per la Modellazione di Sistemi Sritici basata su metodi e tecniche di Model Driven Engineering",
