Added the Acceleo section

--- a/report/ModelDrivenApproaches.tex
+++ b/report/ModelDrivenApproaches.tex
@@ -28,7 +28,7 @@ As described in \cite{Papa11}, a transformation is formed by a set of rules, or 
 Of course, both the source and destination model must comply with their respective meta-models.
 %FIXME add a picture like the one in http://www.ebpml.org/blog/130.htm
 
-
+\input{Acceleo}
    
 
 % The best known MDE initiative is the Object Management Group (OMG) initiative Model-Driven Architecture (MDA), which is a registered trademark of OMG \cite{MDE}.
