--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,14 @@
 % References
 
+
+@Misc{ UnderstandMetamodelling,
+	title = "Understanding Metamodelling",
+	author = "C. Atkinson and T. Kühne and C. Gonzalez-Perez",
+	howpublished = "\url{http://www.er.byu.edu/er2003/slides/ER2003T1HendersonSellers.pdf}",
+	year = "2003",
+	note = "[Online; accessed 7-July-2012]"
+}
+
 @Misc{ M2TandM2M,
 	title = "Comparing M2T and M2M Complementary Approaches",
 	author = "Hugo Bruneliere and Richard Paige and Goran Olsen",
