added JavaRmi and BPEL sections

--- a/report/ServiceOrientedComputing.tex
+++ b/report/ServiceOrientedComputing.tex
@@ -112,9 +112,11 @@ Among the workflow management systems, there are: FIXME Introduce BPEL and descr
 \end{figure} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{BPEL}
-\subsection{Java RMI}
-- Overview, features. - Why? it can run everywhere, lightweight scenarios.
+%\subsection{BPEL} FIXME: review!
+\input{BPEL}
+%\subsection{Java RMI} FIXME: review!
+\input{JavaRMI}
+%- Overview, features. - Why? it can run everywhere, lightweight scenarios.
 %\subsection{Jet}
 %\subsection{EMF and Open Architecture Ware (Eclipse)}
 %\subsection{other...} 
