--- a/report/references.bib
+++ b/report/references.bib
@@ -101,14 +101,14 @@
 	title = "Uddi XML.org",
 	url = "http://uddi.xml.org/",
 	author = "Oasis Consortium",
-	note = "[Online; accessed April-2010]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ MDE,
 	title = "Model Driven Engineering",
 	url = "http://en.wikipedia.org/wiki/Model-driven_engineering",
 	author = "Wikipedia",
-	note = "[Online; accessed April-2010]"
+	note = "[Online; accessed July-2012]"
 }
 
 @PhDThesis{ Marrone,
@@ -142,7 +142,7 @@
 	author = "SunMicrosystems",
 	howpublished = "\url{http://java.sun.com/javase/technologies/core/basic/rmi/whitepaper/index.jsp}",
 	year = "2008",
-	note = "[Online; accessed 12-September-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ AboutJava-sun,
@@ -150,7 +150,7 @@
 	author = "SunMicrosystems",
 	howpublished = "\url{http://www.sun.com/aboutsun/media/presskits/2006-1113/Java_aag_100306.pdf}",
 	year = "2008",
-	note = "[Online; accessed 23-November-2008]"
+	note = "[Online; accessed June-2012]"
 }
 
 @Misc{ RMI-client-sun,
@@ -158,7 +158,7 @@
 	author = "SunMicrosystems",
 	howpublished = "\url{http://java.sun.com/docs/books/tutorial/rmi/client.html}",
 	year = "2008",
-	note = "[Online; accessed 09-September-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ RMI-overview-sun,
@@ -166,7 +166,7 @@
 	author = "SunMicrosystems",
 	howpublished = "\url{http://java.sun.com/docs/books/tutorial/rmi/overview.html}",
 	year = "2008",
-	note = "[Online; accessed 09-September-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ DS-course,
@@ -181,7 +181,7 @@
 	author = "OASIS",
 	howpublished = "\url{http://docs.oasis-open.org/wsbpel/2.0/wsbpel-v2.0.pdf}",
 	year = "2008",
-	note = "[Online; accessed 12-September-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ BPEL-ecplise,
@@ -189,7 +189,7 @@
 	author = "Antony Miguel",
 	howpublished = "\url{http://www.eclipse.org/tptp/platform/documents/design/choreography_html/tutorials/wsbpel_tut.html}",
 	year = "2005",
-	note = "[Online; accessed 13-October-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ SOAP,
@@ -197,15 +197,15 @@
 	author = "Jack Koftikian",
 	howpublished = "\url{www.sts.tu-harburg.de/pw-and-m-theses/2001/Koft01.pdf}",
 	year = "2001",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
-@Misc{ SOAP-performanceTest,
+@Misc{ FIXMESOAP-performanceTest BROKEN LINK,
 	title = "Performance Test Results (SOAP, RMI, JAX-RPC)",
 	author = "Dennis M. Sosnoski",
 	howpublished = "\url{http://sosnoski.com/presents/cleansoap/results.html}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed December-2008]"
 }
 
 @Misc{ SOAP-understanding,
@@ -213,7 +213,7 @@
 	author = "Mark C. Stiver {Kennard Scribner}",
 	howpublished = "\url{http://www.developer.com/services/article.php/641321}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ BPEL-introduction,
@@ -221,7 +221,7 @@
 	author = "Kumar Raj Moorthy",
 	howpublished = "\url{http://www.developer.com/services/article.php/3609381}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Article{ RMI-art1,
@@ -260,7 +260,7 @@
 	title = "Business Process Execution Language --- Wikipedia{,} The Free Encyclopedia",
 	year = "2008",
 	howpublished = "\url{http://en.wikipedia.org/w/index.php?title=Business_Process_Execution_Language&oldid=251564543}",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ BPELenginesComparisonOnWikipedia,
@@ -268,14 +268,14 @@
 	author = "Jayvdb",
 	howpublished = "\url{http://en.wikipedia.org/w/index.php?title=User:Jayvdb/Comparison_of_BPEL_engines&oldid=248809065}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ OraBPELRMIInvocation,
 	title = "Invoking a BPEL Process in Oracle BPEL Engine",
 	author = "Eclipse",
 	howpublished = "\url{http://www.eclipse.org/tptp/platform/documents/design/choreography_html/tutorials/wsbpel_tut.html}",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ ebPML.org,
@@ -283,7 +283,7 @@
 	author = "ebpml.org",
 	howpublished = "\url{http://www.ebpml.org/bpel4ws.htm}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ RMI-art4,
@@ -291,18 +291,18 @@
 	author = "Ahamed K Aslam",
 	howpublished = "\url{http://www.developer.com/java/ent/article.php/3455311}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ RMI-art5,
 	title = "jGuru Remote Method Invocation (RMI)",
 	author = "JGuruGroup",
-	howpublished = "\url{http://java.sun.com/developer/onlineTraining/rmi/RMI.html\#Comparison}",
+	howpublished = "\url{http://java.sun.com/developer/onlineTraining/rmi/RMI.html#Comparison}",
 	year = "2008",
 	note = "[Online; accessed 14-December-2008]"
 }
 
-@Misc{ BPEL-art1,
+@Misc{ FIXMEBPEL-art1 BROKEN LINK,
 	title = "Designing Using the Partner Link Element",
 	author = "SunMicrosystems",
 	howpublished = "\url{http://developers.sun.com/docs/javacaps/designing/bpelddg.ggbxe.html}",
@@ -315,7 +315,7 @@
 	author = "SunMicrosystems",
 	howpublished = "\url{http://java.sun.com/j2se/1.5.0/docs/guide/rmi/Factory.html}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 @Misc{ ApacheODE,
@@ -323,7 +323,7 @@
 	author = "TheApacheSoftwareFoundation",
 	howpublished = "\url{http://ode.apache.org/architectural-overview.html}",
 	year = "2008",
-	note = "[Online; accessed 14-December-2008]"
+	note = "[Online; accessed July-2012]"
 }
 
 
