Changes from Stefano

--- a/report/Acceleo.tex
+++ b/report/Acceleo.tex
@@ -7,9 +7,9 @@ General Info about meta-modelling   :Pag7 \cite{AcceleoUserGuide}
 - MEtamodelling is a vast domain
 --- MetaModelling has been formalizaed by OMG, known as MOF Meta-Modeling Facilities
 ----- MOF is itself a model, represented as a tree. It is considered a meta-meta-model as it can be used to describe many other meta-models. This is possible thanks to the fact that its components are basic, and form the atomic pieces used to create other models. 
-For example, if a map represents a model of a region, existing in the real world, its meta-model would contain the basic elements to represent such a map, namely, a legend. This meta-model would contain elements such as roads, highways, rivers, cities, villages etc. In this context, a meta-meta-model would go further deep in the description, containing the structure of the atomic elements to represent the elements of the meta-model (the legend). For example, of a river, it would present a modelization of it, containing name, depth, length and more.  
+For example, if a map represents a model of a region, existing in the real world, its meta-model would contain the basic elements to represent such a map, namely, a legend. This meta-model would contain elements such as roads, highways, rivers, cities, villages etc. In this context, a meta-meta-model would go further deep in the description, containing the structure of the atomic elements to represent the elements of the meta-model (the legend); for example, of a river, it would present a model containing name, depth, length, etc.  
 
 Basically, a model is an instance of a meta-model \cite{UnderstandMetamodelling}. 
 
 
----- XMI is the standard from OMG to transform, interchange, and express any model realized with the MOF.   
+%---- XMI is the standard from OMG to transform, interchange, and express any model realized with the MOF.   
