--- a/report/JavaRMI.tex
+++ b/report/JavaRMI.tex
@@ -1,5 +1,4 @@
 % Literature review: Summary of Java RMI
-% Author: Pierre
 
 \subsection{Java RMI} \label{JavaRMI}   
 
@@ -39,8 +38,7 @@ These methods take a string formatted in the following way as an argument:
 where \textit{computerName} and \textit{port} refer to the location of the RMI registry.
 \cite{DS-book}
 
-% New part added by Antonio
-% FIXME - I don't know the source of the following text. I need it for citations... I had a look to the "cite" at the beginning of this section, but no source of them fits to it..... :(
+% New part 
 
 \subsubsection{Java RMI Architecture} 
 \label{JavaRMIArchitecture}
