--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -3,7 +3,7 @@
 
 Today the web is quickly expanding and new functionalities and applications, appearing day by day, are heavily increasing its potentialities and ease of use. Actually, one of the reasons why this growth is taking place is the possibility to connect and let communicate different existent applications, or better, \textit{services}. Now more than ever, with the wide expansion of portable and web-capable devices, based on different technologies, platforms or hardware, this interconnection among services is not only required, but necessary to create a common ground to build software upon.\\
 
-The interconnection among services can be done through ad-hoc solutions, connecting, for example, some preexistent legacy applications to create a new application (perhaps available online or over a company's intranet) or using paradigms to abstract the existent applications and show them as services in a standard way. %SOC 
+The interconnection among services can be done through ad-hoc solutions, connecting, for example, some preexistent legacy applications to create a new application (perhaps available online or over a company's intranet) or using paradigms to absract the existent applications and show them as services in a standard way. %SOC 
 In the case where the standard paradigm is favored, the implementation of such services also needs an architectural infrastructure style, where there are well defined the roles of which part of the application is offering to the outside world the service (Service Provider), who is the user of it (Service Client) and where the service should be published for a public usage (Service Registry). %SOA
 A service implemented following such an architecture and guidelines, where its communication channel is the web, is called \textit{Web Service}.\\ %(cite intoduzione ragionata al mondo dei web serv)
 
