Changes from Stefano

--- a/report/document.tex
+++ b/report/document.tex
@@ -79,6 +79,7 @@ pdfproducer = {latex + ps2pdf}}
 
 % Make every section start in a new page
 \let\stdsection\section  
+\newcommand{\STE}[1]{\textcolor{red}{#1}}
 \renewcommand\section{\newpage\stdsection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% END SETTINGS %%%%%%%%%%%%%%%%%%
